feat: add new icons for trash windows on github stats

--- a/src/app/components/github-stats/github-stats.component.html
+++ b/src/app/components/github-stats/github-stats.component.html
@@ -53,32 +53,32 @@
           
           <!-- Trash items -->
           <div class="trash-item">
-            <img src="assets/images/icons/deleted-file.png" alt="Deleted Text File">
-            <span>unused_code.js</span>
+            <img src="assets/images/icons/trash/python-file.png" alt="Spaghetti Code">
+            <span>spaghetti.py</span>
           </div>
           
           <div class="trash-item">
-            <img src="assets/images/icons/deleted-img.png" alt="Deleted Image">
-            <span>old_logo.png</span>
+            <img src="assets/images/icons/trash/star-wars-postlogie.jpeg" alt="Star Wars Postlogie">
+            <span>postlogie.mp4</span>
           </div>
           
           <div class="trash-item">
-            <img src="assets/images/icons/rn.png" alt="Front National">
-            <span>fachos.jpg</span>
+            <img src="assets/images/icons/trash/rn.png" alt="Front National">
+            <span>fachos.webp</span>
           </div>
           
           <div class="trash-item">
-            <img src="assets/images/icons/deleted-file.png" alt="Deleted Text File">
-            <span>bugs_fixed.txt</span>
+            <img src="assets/images/icons/trash/ynov.png" alt="Ynov">
+            <span>wasted-life.jpg</span>
           </div>
           
           <div class="trash-item">
-            <img src="assets/images/icons/deleted-file.png" alt="Deleted Text File">
-            <span>todo_v1.md</span>
+            <img src="assets/images/icons/trash/test.png" alt="Test">
+            <span>test</span>
           </div>
           
           <div class="trash-item">
-            <img src="assets/images/icons/deleted-img.png" alt="Deleted Image">
+            <img src="assets/images/icons/trash/shrek.png" alt="Shrek">
             <span>screenshot.jpg</span>
           </div>
         </div>
