--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -1,11 +1,20 @@
-<div class="web">
-
-</div>
-
-<div class="video-games">
-
-</div>
-
-<div class="devops">
-    
+<div class="project-container">
+  <div class="project-card" *ngFor="let project of projects">
+    <div class="project-info">
+      <div class="project-text">
+        <h3>{{ project.title }}</h3>
+        <p>{{ project.description }}</p>
+        <a [href]="project.link" target="_blank">View Project</a>
+      </div>
+      <div class="project-tech">
+        <h4>Technologies Used:</h4>
+        <ul>
+          <li *ngFor="let tech of project.technologies">{{ tech }}</li>
+        </ul>
+      </div>
+    </div>
+    <div class="project-image">
+        <img [src]="project.imageUrl" alt="{{ project.title }}" class="project-image"/>
+    </div>
+  </div>
 </div>
