--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -3,11 +3,10 @@
     <div class="project-info">
       <div class="project-text">
         <h3>{{ project.title }}</h3>
-        <p>{{ project.description }}</p>
+        <p *ngFor="let description of project.description">{{ description }}</p>
         <a [href]="project.link" target="_blank">View Project</a>
       </div>
       <div class="project-tech">
-        <h4>Technologies Used:</h4>
         <ul>
           <li *ngFor="let tech of project.technologies">{{ tech }}</li>
         </ul>
