--- a/src/app/components/projects/projects.component.css
+++ b/src/app/components/projects/projects.component.css
@@ -1,8 +1,43 @@
 .projects-container {
   font-family: "Courier New", Courier, monospace;
-  max-width: 1200px;
   margin: 0 auto;
-  padding: 40px 20px;
+  padding: 40px 80px;
+  position: relative;
+  overflow: hidden;
+}
+
+.bg {
+  animation: slide 3s ease-in-out infinite alternate;
+  background-image: linear-gradient(
+    -60deg,
+    rgb(246, 246, 246) 50%,
+    rgb(229, 229, 229) 50%
+  );
+  bottom: 0;
+  left: -50%;
+  opacity: 0.5;
+  position: fixed;
+  right: -50%;
+  top: 0;
+  z-index: -1;
+}
+
+.bg2 {
+  animation-direction: alternate-reverse;
+  animation-duration: 10s;
+}
+
+.bg3 {
+  animation-duration: 12s;
+}
+
+@keyframes slide {
+  0% {
+    transform: translateX(-25%);
+  }
+  100% {
+    transform: translateX(25%);
+  }
 }
 
 .layout-toggle {
@@ -81,7 +116,11 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background: linear-gradient(to bottom, rgba(0,0,0,0) 0%, rgba(0,0,0,0.4) 100%);
+  background: linear-gradient(
+    to bottom,
+    rgba(0, 0, 0, 0) 0%,
+    rgba(0, 0, 0, 0.4) 100%
+  );
 }
 
 .project-content {
@@ -313,16 +352,17 @@
     flex-direction: column;
     min-height: unset;
   }
-  
-  .project-info, .project-container .project-image {
+
+  .project-info,
+  .project-container .project-image {
     width: 100%;
     order: unset;
   }
-  
+
   .project-container .project-image {
     height: 250px;
   }
-  
+
   .divider {
     display: none;
   }
