feat(styles): added media queries to support 16/9 feat: added admin component

--- a/src/app/components/github-stats/github-stats.component.css
+++ b/src/app/components/github-stats/github-stats.component.css
@@ -435,3 +435,10 @@ h2 {
     max-width: 450px;
   }
 }
+
+@media screen and (min-aspect-ratio: 16/9) {
+  .github-stats-container {
+    gap: 100px;
+    padding: 80px 120px;
+  }
+}
