--- a/src/app/components/hobbies/hobbies.component.css
+++ b/src/app/components/hobbies/hobbies.component.css
@@ -28,7 +28,12 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background: -webkit-linear-gradient(-20deg, rgba(255, 255, 255, 0.9) 45%, transparent 0%), url('/assets/images/backgrounds/notes-musique-tableau-flou-3.jpg');
+  background: -webkit-linear-gradient(
+      -20deg,
+      rgba(255, 255, 255, 0.9) 45%,
+      transparent 0%
+    ),
+    url("/assets/images/backgrounds/notes-musique-tableau-flou-3.jpg");
   background-size: cover;
   background-position: center;
   padding: 80px;
@@ -45,7 +50,7 @@
 }
 
 .hobbie-desc {
-  font-family: 'Courier New', Courier, monospace;
+  font-family: "Courier New", Courier, monospace;
   width: 35%;
   display: flex;
   flex-direction: column;
@@ -54,6 +59,8 @@
 
 .hobbie-image {
   width: 50%;
+  display: flex;
+  justify-content: center;
 }
 
 .hobbie-image img {
@@ -115,6 +122,16 @@
 }
 
 @keyframes fadeIn {
-  from { opacity: 0; }
-  to { opacity: 1; }
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@media screen and (min-aspect-ratio: 16/9) {
+  .hobbie-image {
+    margin-right: 35px;
+  }
 }
