--- a/src/app/templates/pages/admin/admin.component.html
+++ b/src/app/templates/pages/admin/admin.component.html
@@ -1,4 +1,9 @@
 <div class="admin-container">  
+  <div class="admin-header">
+    <h1>Project Administration</h1>
+    <button type="button" class="logout-btn" (click)="logout()">Logout</button>
+  </div>
+  
   <h1>Project Administration</h1>
   
   @if (success) {
