--- a/src/app/templates/layout/header/header.component.html
+++ b/src/app/templates/layout/header/header.component.html
@@ -30,11 +30,21 @@
         <div class="menu-title"><a routerLink="/projects" routerLinkActive="active">Projects</a></div>
       </li>
       <li class="menu-item">
+        <div class="menu-title"><a href="#" (click)="toggleContactModal($event)" [class.active]="isModalOpen">Contact</a></div>
+      </li>
+      @if (!isAdmin) {
+      <li class="menu-item">
+        <a routerLink="/projects/admin">Login</a>
+      </li>
+      }
+      @else {
+      <li class="menu-item">
         <a routerLink="/projects/admin">Admin Panel</a>
       </li>
       <li class="menu-item">
-        <div class="menu-title"><a href="#" (click)="toggleContactModal($event)" [class.active]="isModalOpen">Contact</a></div>
+        <a routerLink="/projects/logout" (click)="logout()">Logout</a>
       </li>
+      }
     </ul>
   </div>
 </div>
