--- a/src/app/templates/pages/projects/projects.component.css
+++ b/src/app/templates/pages/projects/projects.component.css
@@ -390,6 +390,23 @@
   background: #c82333;
 }
 
+.add-project-card{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: background-color 0.5s ease;
+  cursor: pointer;
+}
+
+.add-project-card:hover {
+  background-color: #0d6efd !important;
+}
+
+.add-project-card:hover svg {
+  fill: white;
+  transition: fill 0.3s ease;
+}
+
 @media (max-width: 768px) {
   .card-content {
     flex-direction: column;
