--- a/src/app/templates/pages/projects/projects.component.html
+++ b/src/app/templates/pages/projects/projects.component.html
@@ -51,7 +51,7 @@
         </div>
       </div>
     </div>
-    <div class="project-card add-project-card" *ngIf="isAdmin" (click)="global.redirect('./projects/admin')">
+    <div class="project-card add-project-card" *ngIf="isAdmin" (click)="globalService.redirect('./projects/admin')">
       <span><svg xmlns="http://www.w3.org/2000/svg" height="96px" viewBox="0 -960 960 960" width="96px" fill="#0d6efd"><path d="M440-440H200v-80h240v-240h80v240h240v80H520v240h-80v-240Z"/></svg></span>
     </div>
   </div>
@@ -96,7 +96,7 @@
         </button>
       </div>
     </div>
-    <div class="project-card add-project-card" *ngIf="isAdmin" (click)="global.redirect('./projects/admin')">
+    <div class="project-card add-project-card" *ngIf="isAdmin" (click)="globalService.redirect('./projects/admin')">
       <span><svg xmlns="http://www.w3.org/2000/svg" height="96px" viewBox="0 -960 960 960" width="96px" fill="#0d6efd"><path d="M440-440H200v-80h240v-240h80v240h240v80H520v240h-80v-240Z"/></svg></span>
     </div>
   </div>
