--- a/src/app/templates/pages/projects/projects.component.css
+++ b/src/app/templates/pages/projects/projects.component.css
@@ -79,6 +79,10 @@
   gap: 30px;
 }
 
+.projects-wrapper .project-card {
+  min-height: 50vh;
+}
+
 .project-card {
   position: relative;
   border-radius: 16px;
