--- a/src/app/templates/pages/projects/projects.component.html
+++ b/src/app/templates/pages/projects/projects.component.html
@@ -33,7 +33,8 @@
         </div>
         
         <div class="project-tags">
-          <span *ngFor="let tag of project.tags">{{ tag }}</span>
+          <span *ngFor="let tag of project.tags.slice(0, 3)">{{ tag }}</span>
+          <span *ngIf="project.tags.length > 3" class="more">+{{ project.tags.length - 3 }}</span>
         </div>
         
         <div class="project-description">
@@ -43,7 +44,7 @@
         <div class="project-footer">
           <div class="project-technologies">
             <span *ngFor="let tech of project.technologies.slice(0, 2)">{{ tech }}</span>
-            <span *ngIf="project.technologies.length > 2" class="more-tech">+{{ project.technologies.length - 2 }}</span>
+            <span *ngIf="project.technologies.length > 2" class="more">+{{ project.technologies.length - 2 }}</span>
           </div>
           <a [href]="project.link" target="_blank" class="view-button">
             <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#FFFFFF"><path d="M200-120q-33 0-56.5-23.5T120-200v-560q0-33 23.5-56.5T200-840h280v80H200v560h560v-280h80v280q0 33-23.5 56.5T760-120H200Zm188-212-56-56 372-372H560v-80h280v280h-80v-144L388-332Z"/></svg>
