--- a/src/app/templates/pages/projects/projects.component.html
+++ b/src/app/templates/pages/projects/projects.component.html
@@ -103,3 +103,11 @@
   </div>
 
 </div>
+
+<app-confirmation-modal
+  [isVisible]="modalVisible"
+  [message]="modalMessage"
+  (confirm)="modalService.confirmAction()"
+  (cancel)="modalService.cancelAction()"
+  (closeModal)="modalService.close()">
+</app-confirmation-modal>
