--- a/src/app/templates/pages/admin/admin.component.html
+++ b/src/app/templates/pages/admin/admin.component.html
@@ -72,16 +72,39 @@
       <label>Images:</label>
       
       <div class="sub-form-group">
-        <div>
+        <div class="file-input-container">
           <label for="gridImage">Grid Image:</label>
-          <input type="file" id="gridImage" (change)="onGridImageSelected($event)" class="form-control">
+          <div class="custom-file-input">
+            <input type="file" id="gridImage" (change)="onImageSelected('grid', $event)" class="form-control" #gridFileInput>
+            <button type="button" class="file-button" (click)="gridFileInput.click()">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path>
+                <polyline points="17 8 12 3 7 8"></polyline>
+                <line x1="12" y1="3" x2="12" y2="15"></line>
+              </svg>
+              Choose File
+            </button>
+            <span class="file-name">{{ gridImageName || 'No file chosen' }}</span>
+          </div>
           <div class="image-preview" *ngIf="gridImagePreview">
             <img [src]="gridImagePreview" alt="Grid image preview">
           </div>
         </div>
-        <div>
+        
+        <div class="file-input-container">
           <label for="listImage">List Image:</label>
-          <input type="file" id="listImage" (change)="onListImageSelected($event)" class="form-control">
+          <div class="custom-file-input">
+            <input type="file" id="listImage" (change)="onImageSelected('list', $event)" class="form-control" #listFileInput>
+            <button type="button" class="file-button" (click)="listFileInput.click()">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path>
+                <polyline points="17 8 12 3 7 8"></polyline>
+                <line x1="12" y1="3" x2="12" y2="15"></line>
+              </svg>
+              Choose File
+            </button>
+            <span class="file-name">{{ listImageName || 'No file chosen' }}</span>
+          </div>
           <div class="image-preview" *ngIf="listImagePreview">
             <img [src]="listImagePreview" alt="List image preview">
           </div>
